# app/routes/v1.go
@@ -13,30 +13,32 @@ func New() (eng *gin.Engine) {
 		gin.Recovery(),
 	)
 	taskController := new(controllers.TaskController)
-	tasksController := new(controllers.TasksController)
 	executeController := new(controllers.ExecuteController)
 	dbController := new(controllers.DBController)
 
 	v1 := eng.Group(basePath)
 	{
-		task := v1.Group("/task")
+		task := v1.Group("/tasks")
 		{
 			task.PUT("/:taskName", taskController.CreateOrUpdate)
 			task.DELETE("/:taskName", taskController.Remove)
+			task.GET("/:taskName", taskController.Get)
 		}
 
-		v1.GET("/tasks", tasksController.List)
+		v1.GET("/tasks", taskController.List)
 
 		execute := v1.Group("/execute")
 		{
 			execute.POST("/runSQL", executeController.RunSQL)
 		}
 
-		databases := v1.Group("/databases")
+		databases := v1.Group("/databases", dbController.List)
 		{
 			databases.PUT("/:dbName", dbController.CreateOrUpdate)
 			databases.DELETE("/:dbName", dbController.Remove)
+			databases.GET("/:dbName", dbController.Get)
 		}
+		v1.GET("/databases", dbController.List)
 	}
 	return
 }
