# app/types/webmodels.go
@@ -27,8 +27,8 @@ type TaskReq struct {
 
 // RunSQLReq example
 type RunSQLReq struct {
-	DBCustomName string `json:"dbCustomName" binding:"required"`
-	SQLStr       string `json:"SQLStr" binding:"required"`
+	DBCustomerName string `json:"dbCustomerName" binding:"required"`
+	SQLStr         string `json:"SQLStr" binding:"required"`
 }
 
 // DBReq example
@@ -38,6 +38,6 @@ type DBReq struct {
 
 // DB example
 type DB struct {
-	CustomName string `json:"customName" binding:"required"`
+	CustomerName string `json:"customerName" binding:"required"`
 	DBBase
 }
